# opentelemetry-exporter-dataset

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.contrib_datasetexporter_latest  Makefile  README.md  benchmark-results.json  codecov.yml  config.yaml  go.mod  otelcol-builder.datasetexporter-latest.yaml  otelcol-builder.yaml
.github/: dependabot.yml
.github/actions/build-docker-images/: action.yml
.github/workflows/: benchmarks.yaml  code-quality.yaml  e2e-test.yaml  release-image.yaml  secrets-scanner.yaml
data/: logs.json  traces.json
dataset-go/: .gitignore  .golangci.yml  .pre-commit-config.yaml  Makefile  README.md  RELEASE_NOTES.md  codecov.yml  go.mod  go.sum
dataset-go/.github/: dependabot.yml
dataset-go/.github/workflows/: code-quality.yaml  secrets-scanner.yaml  stress-tests.yaml  unit-tests.yaml
dataset-go/docs/: ARCHITECTURE.md
dataset-go/examples/client/: README.md  go.mod  main.go
dataset-go/examples/readme/: .gitignore  go.mod  go.sum  main.go
dataset-go/examples/stress/: README.md  go.mod  go.sum  main.go
dataset-go/pkg/buffer/: buffer.go  buffer_test.go
dataset-go/pkg/buffer_config/: buffer_config.go  buffer_config_test.go
dataset-go/pkg/client/: add_events.go  add_events_long_running_test.go  add_events_test.go  client.go  client_test.go
dataset-go/pkg/config/: config.go  config_test.go
dataset-go/pkg/meter_config/: meter_config.go  (+1 more)
dataset-go/scripts/: install-dev-tools.sh  run-stress-test.sh  test-ssl-certificates.sh
docs/: INSTRUCTIONS.md
dummy-server/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  test.py
examples/client/: .gitignore  go.mod  main.go
examples/readme/: README.md  go.mod  main.go
examples/stress/: .gitignore  go.sum
logs-generator/: Dockerfile  Makefile  README.md  generate.py  pyproject.toml
pkg/buffer/: buffer_test.go
pkg/buffer_config/: buffer_config.go  buffer_config_test.go
pkg/client/: statistics.go
pkg/config/: config_test.go
pkg/server_host_config/: server_host_config.go
pkg/statistics/: statistics.go
pkg/version/: version.go  version_test.go
playbooks-runbooks/cannot-unmarshal-the-configuration/: playbook.md
playbooks-runbooks/incorrect-credentials/: playbook.md
scripts/: README.md  check-for-gnu-tools.sh  common.sh  update-builder-config.sh  update-dataset-go-version.sh  update-otel-version.sh
scripts/benchmarking/: README.md  docker-compose.yaml  otel-config.yaml  test.sh
scripts/ci/: invert_markdown_table.js
scripts/e2e/: .dockerignore  README.md  docker-compose.yaml  otel-config.yaml  test.sh
scripts/reliability/: .gitignore  README.md  docker-compose.yaml  otel-config.yaml  server-control.sh  test.sh
test/testdata/: buffer_test_payload_full.json  buffer_test_payload_injection.json
(+20 files in other folders)
