[tool.poetry]
name = "dummy-server"
version = "0.0.1"
description = ""
authors = ["Martin Majlis <martin.majlis@sentinelone.com>"]
readme = "README.md"
packages = [{include = "dummy_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.5"
pyhocon = "^0.3.61"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
ddt = "^1.7.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
